ml-models/v1/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: max-object-detector
  namespace: ml-model
  labels:
    app: max-object-detector
spec:
  selector:
    matchLabels:
      app: max-object-detector
  replicas: 1
  template:
    metadata:
      labels:
        app: max-object-detector
    spec:
      containers:
      - name: max-object-detector
        image: quay.io/codait/max-object-detector:latest
        ports:
        - containerPort: 5000
