ml-models/v1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: max-object-detector
  namespace: ml-model
spec:
  selector:
    app: max-object-detector
  ports:
  - port: 5000
  type: NodePort
