ml-models/v1/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: max-object-detector
  namespace: ml-model
spec:
  to:
    kind: Service
    name: max-object-detector
    weight: 100
  port:
    targetPort: 5000
  wildcardPolicy: None
